--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,15 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - '8000:8000'
+    depends_on:
+      db:
+        condition: service_healthy
     links:
-      - "db:postgres"
+      - db:postgres
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+
   db:
     image: postgres
     container_name: postgres
@@ -21,3 +28,8 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+   healthchek:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
