--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,10 @@ version: '3.8'
 
 services:
   django:
-    image: registry.gitlab.com/agapochkina/django-docker
+    image: agapochkina/private_registry:django
     container_name: django 
     volumes: 
       - './djangogirls:/opt/djangogirls'
-    command: python manage.py runserver 0.0.0.0:8000
     ports:
       - '8000:8000'
     depends_on:
@@ -28,7 +27,7 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    healthchek:
+    healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
