--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - deploy
 
 build:
-  image: gitlab/dind # тут нормально работает docker login, но не работает apk
+  image: gitlab/dind
   services:
     - docker:dind
   before_script:
@@ -16,16 +16,41 @@ build:
   tags:
     - docker
   only:
+    refs:
+      - master
     changes:
       - Dockerfile
       - ./djangogirls/*
 
-deploy:
-  image: docker:latest # тут работает apk, но надо подбивать костыль для docker login
+test:
+  image: docker:latest
   services:
     - docker:dind
   variables:
-    DOCKER_HOST: tcp://192.168.56.105:2375 # костыль для docker login
+    DOCKER_HOST: tcp://192.168.56.105:2375
+  stage: test
+  before_script:
+    - apk add --no-cache openssh-client bash
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - docker login -u $HUB_USERNAME -p $HUB_TOKEN
+  script:
+    - chmod +x ./test_deploy.sh
+    - ./test_deploy.sh
+    - sleep 1m
+  tags:
+    - docker
+  needs:
+    - build
+
+deploy:
+  image: docker:latest
+  services:
+    - docker:dind
+  variables:
+    DOCKER_HOST: tcp://192.168.56.105:2375
   stage: deploy
   before_script:
     - apk add --no-cache openssh-client bash
@@ -35,6 +60,9 @@ deploy:
     - chmod 700 ~/.ssh
     - docker login -u $HUB_USERNAME -p $HUB_TOKEN
   script:
-    - ssh -o StrictHostKeyChecking=no gitlab-runner@192.168.56.103 "cd /opt/deploy/django-docker && git checkout master && git pull && docker-compose up -d"
+    - ./deploy.sh
   tags:
     - docker
+  when: on_success
+  only:
+    - master
