--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       driver: gelf
       options:
         gelf-address: udp://192.168.56.102:12201
-        tag: postgres-log
+        tag: postgres-logs
     ports:
       - '5432:5432'
     environment:
